--- a/_posts/2014-05-21-new3.md
+++ b/_posts/2014-05-21-new3.md
@@ -1,11 +1,15 @@
 ---
 layout: ffc-layouts
+title: Homepage Callout
+image_align: center
+
+
 ---
 
 #### Family Folder Collector แอพบันทึกข้อมูลสุขภาพครอบครัว เพื่อพัฒนาสาธารณสุขไทย
 
-
-![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_00.jpg)  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_00.jpg?resize=400,200)  
 
 <p>เมื่อวันที่ 21 พฤษภาคมที่ผ่านมา ศูนย์สุขภาพชุมชนตำบลสารภี โรงพยาบาลสารภี เชียงใหม่ ร่วมกับ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ  
 ( NECTEC ) จัดสาธิตการใช้แอพบันทึกสุขภาพครอบครัว FFC Plus ด้วยแท็บเล็ต Android สำหรับเจ้าหน้าที่แพทย์เพื่อตอบสนองงานด้านสาธารณสุขชุมชน ในเรื่องการบันทึกข้อมูลบริการชุมชนนอกสถานที่ ซึ่งสามารถป้องกัน เฝ้าระวังโรคได้อย่างมีประสิทธิภาพมากขึ้น ประชาชนเข้าถึงบริการด้านสุขภาพได้อย่างรวดเร็ว
@@ -13,33 +17,37 @@ layout: ffc-layouts
  ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก  
   จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที
 สำหรับแอพ FFC Plus โปรแกรมบันทึกสุขภาพครอบครัว นี้ ได้พัฒนาแอพบนแท็บเล็ต  Android</p>
-![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_01.jpg)  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_01.jpg?resize=400,200)  
 
   ซึ่งแอพนี้สามารถดาวน์โหลดใช้ฟรีผ่านทาง Play Store  ซึ่งแอพ FFC Plus นี้เรียกได้ว่าเป็นส่วนเสริมสำหรับโปรแกรม JHCIS โดยผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น  
-  ![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_09.jpg)  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_09.jpg)  
 
   ผลที่ได้คือ เจ้าหน้าที่แพทย์สามารถพกพาแท็บเล็ตแทน สมุดบันทึก ในการกรอกบันทึกข้อมูล การค้นหาข้อมูลผู้ป่วยได้เร็วขึ้น ได้ข้อมูลเชิงลึกมากขึ้นเช่น  
 พิกัดของบ้านผู้ป่วย ได้ภาพถ่ายของผู้ป่วย แถมสามารถรู้ประวัติคนไข้ของผู้ป่วยในแต่ละบ้าน  
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_03.jpg)  
 
 FFC Plus เป็นระบบเสริม (Plugin)ของ JHCIS ซึ่งเป็นระบบที่พัฒนาโดยกระทรวงสาธารณสุข  ใช้มาหลายปีแล้ว และใช้กันทั่งประเทศอยู่   ซึ่ง FFC Plus ช่วยในการส่งรายงานให้กระทรวงสาธารณสุข ส่งรายงานให้กับกองทุนในการเบิกจ่าย ซึ่งจะไม่มีการกรอกซ้ำซ้อนเลย ลดภาระของเจ้าหน้าที่ด้วย
 ทีมงานได้ไปดู ทีมสาธารณสุข ไปเก็บข้อมูลสุขภาพที่ชุมชนตำบลสารภี จ.เชียงใหม่ ซึ่งเป็นตำบลขนาดกลาง มีจำนวน 2,000 หลังคาเรือน   มีประชากรประมาณ 7,000 กว่าคน โดยชุมชนนี้มีผู้สูงอายุอยู่จำนวนมาก และส่วนใหญ่ผู้ป่วยจะใช้บริการในโรงพยาบาลสารภีมากกว่าใช้บริการจากศูนย์สุขภาพชุมชน  ทำให้เจ้าหน้าที่จากศูนย์สุขภาพชุมชน ต้องใช้วิธีเชิงรุกด้วย การเดินเข้าเยี่ยมสมาขิกในชุมชน และใช้ แอพ FFC Plus บนแท็บเล็ตในการกรอกบันทึกข้อมูลสุขภาพ มีการสักถามผู้ป่วยเกี่ยวกับอาการสุขภาพภายในบ้าน พร้อมกับตรวจสุขภาพผู้ป่วยด้วยเครื่องมือแพทย์ เสร็จแล้วทำการถ่ายรูปผู้อาศัยในบ้าน แล้วบันทึกผลการตรวจลงแอพ FFC Plus ด้วยแท็บเล็ต Android ซึ่งทันสมัยกว่า และรวดเร็วกว่าในอดีตที่ต้องบันทึกลงบนสมุดอนามัยครอบครัว แถมแผนที่ได้เห็นแบบแผนที่จริงด้วย จากอดีตที่ไม่มีแผนที่ให้ดู ต้องใช้วิธีการนับก้าว
 โดย FFC Plus 2.0 นี้ สามารถใช้งานแผนที่ google maps ทั้งแบบ online และ offline , ระบุสถานที่สำคัญใหม่ที่น่าสนใจ  , สามารถค้นหาด้วยชื่อบุคคล หมายเลขบัตรประชาชน บ้านเลขที่ ได้  
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_04.jpg)  
 
 <p>ในตัวอย่างนี้เป็นแผนที่แสดง บ้านภายในชุมชน โดยบ้านสีแดง เป็นผู้ป่วยเรื้อรัง ส่วนบ้านสีเขียวคือปกติ  ถ้าเข้าไปในบ้านจะแสดงเป็นข้อมูลภายในบ้านว่ามีใครอาศัยอยู่ในบ้านหลังนี้</p>  
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_05.jpg)  
 
 และแอพนี้สามารถแสดงผังเครือญาติ ภายในบ้านได้ทันทีด้วย ดูประวัติย้อนหลังของผู้ป่วย รายงานกิจกรรมของผู้ป่วยว่าทำอะไรบ้าง  
 เพื่อแอพช่วยวินิจฉัยโรคได้ด้วย ดูค่าน้ำตาลภายในเลือด เคยรับยาอะไรบ้าง  
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_06.jpg)  
 
 และที่สำคัญสามารถรายงานพิกัดพื้นที่โรคระบาด โดยจะแสดงรัศมีวงกลม ว่าพื้นที่บ้านนี้มีโรคระบาด  
 เพื่อกักกันพื้นที่ไม่ให้โรคระบาดนี้กระจายไปสู่บ้านอื่นๆ  เพื่อสะดวกในการดูแล+ เฝ้าระวัง ได้ด้วย  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ![alt text](https://www.it24hrs.com/wp-content/uploads/2014/05/ffc_plus_nectec_07.jpg)  
 
 ซึ่งแอพ FFC Plus นี้ใช้งานได้ฟรี สามารถอำนวยความสะดวกให้กับให้เจ้าหน้าที่สาธารณะสุขในการบันทึกสุขภาพที่บ้านของผู้ป่วย โดยเฉพาะคนชรา ที่อาจไม่สะดวกในการเดินทางไปพบที่โรงพยาบาล ก็สามารถได้รับบริการจากหน่วยแพทย์ในชุมชนได้อย่างทั่วถึง  
