--- a/_posts/2011-02-13-new8.md
+++ b/_posts/2011-02-13-new8.md
@@ -1,11 +1,12 @@
 ---
 title: โปรแกรมผู้ช่วยแพทย์เก็บข้อมูลสุขภาพชุมชน
 date: 2011-02-13 10:45:20 +0700
-description: นักวิจัยศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ (เนคเทค) พัฒนาโปรแกรมเก็บข้อมูลสุขภาพครัวเรือนติดตั้งใช้งานบนซัมซุง กาแลคซี่ แท็บ สนับสนุนภารกิจแพทย์และเจ้าหน้าที่สถานพยาบาลชุมชนเฝ้าระวังโรคระบาด
+description: นักวิจัยศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ (เนคเทค) 
 author: me
+image: new8.jpg
 layout: ffc-layouts
 ---
-### โปรแกรมผู้ช่วยแพทย์เก็บข้อมูลสุขภาพชุมชน
+# โปรแกรมผู้ช่วยแพทย์เก็บข้อมูลสุขภาพชุมชน
 
 ##### นักวิจัยศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ (เนคเทค) พัฒนาโปรแกรมเก็บข้อมูลสุขภาพครัวเรือนติดตั้งใช้งานบนซัมซุง กาแลคซี่ แท็บ สนับสนุนภารกิจแพทย์และเจ้าหน้าที่สถานพยาบาลชุมชนเฝ้าระวังโรคระบาด
 
@@ -29,4 +30,4 @@ layout: ffc-layouts
 
  ระบบเก็บแฟ้มข้อมูลหลังคาเรือนแบบพกพาของเนคเทคยังได้รับรางวัลชนะเลิศ ในการประกวดพัฒนาแอพพลิเคชั่นบนระบบปฏิบัติการแอนดรอยด์ในงานไทยแลนด์ เกม โชว์ 2011  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-![alt text](http://media.komchadluek.net/img/size1/2011/02/13/7kkegbbief9b7id98ig5d.jpg)
+![alt text](http://media.komchadluek.net/img/size1/2011/02/13/7kkegbbief9b7id98ig5dhttps://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-9/10868291_813450192027379_4824265993940559113_n.jpg?oh=b60b984b2f1c74b0fa2c6009b1298404&oe=58888C03.jpg)
