--- a/_posts/2012-01-26-new4.md
+++ b/_posts/2012-01-26-new4.md
@@ -3,9 +3,10 @@ title: ffc ตัวช่วยสถานีอนามัยเก็บข
 date: 2012-01-26 15:43:38 +0700
 description: พัฒนาแอพพลิเคชั่นโปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา FFC สำหรับเก็บข้อมูลสุขภาพของผู้ใช้บริการ
 author: me
+image: new4.jpg
 layout: ffc-layouts
 ---
-#### ffc ตัวช่วยสถานีอนามัยเก็บข้อมูลสุขภาพได้แม่นยำ
+# ffc ตัวช่วยสถานีอนามัยเก็บข้อมูลสุขภาพได้แม่นยำ
 
 เนคเทค ร่วมกับ ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร กระทรวงสาธารณสุข
 พัฒนาแอพพลิเคชั่นโปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา FFC สำหรับเก็บข้อมูลสุขภาพของผู้ใช้บริการ โดย FFC
