--- a/_posts/2016-02-08-new2.md
+++ b/_posts/2016-02-08-new2.md
@@ -1,12 +1,13 @@
 ---
-title: CAT สานฝัน นวัตกรรมสานฝัน ตอน โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว รุ่น 2 1 1
+title: CAT สานฝัน นวัตกรรมสานฝัน ตอนโปรแกรมบันทึกข้อมูลสุขภาพครอบครัว
 date: 2016-02-08 13:33:30 +0700
-description: โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือ เราเรียกส้ันๆ ว่า FFC เป็นโปรแกรมที่ทำงานบนระบบปฏิบัติการแอนดรอยด์ (Android) บนแท็บเล็ต
+description: โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว เราเรียกส้ันๆ ว่า FFC เป็นโปรแกรมที่ทำงานบนระบบปฏิบัติการแอนดรอยด
 author: me
+image: new1.jpg
 layout: ffc-layouts
 ---
 
-### CAT สานฝัน นวัตกรรมสานฝัน ตอน โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว รุ่น 2 1 1
+# CAT สานฝัน นวัตกรรมสานฝัน ตอน โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว รุ่น 2 1 1
 
 
 เผยแพร่เมื่อ 8 ก.พ. 2016
