--- a/_posts/2014-05-29-new5.md
+++ b/_posts/2014-05-29-new5.md
@@ -1,13 +1,12 @@
 ---
-title: Family Folder Collector : ฐานข้อมูลสุขภาพอัจฉริยะ
+title: Family Folder Collector  ฐานข้อมูลสุขภาพอัจฉริยะ
 date: 2014-05-29 16:33:18 +0700
-description: สองโปรแกรมแรกที่แนะนำไปอาจจะเหมาะกับผู้ใช้ในระดับปัจเจกบุคคล แต่เจ้าโปรแกรม Family Folder Collector (FFC) นี้จะมีประโยชน์มากสำหรับโรงพยาบาลหรือหน่วยงานสาธารณสุขในชุมชน
+description: โปรแกรม FFC เหมาะกับผู้ใช้ในระดับบุคคล จะมีประโยชน์มากสำหรับโรงพยาบาลหรือหน่วยงานสาธารณสุขในชุมชน
 author: me
+image: new5.jpg
 layout: ffc-layouts
 ---
-
-
-### Family Folder Collector : ฐานข้อมูลสุขภาพอัจฉริยะ
+# Family Folder Collector : ฐานข้อมูลสุขภาพอัจฉริยะ
 
 สองโปรแกรมแรกที่แนะนำไปอาจจะเหมาะกับผู้ใช้ในระดับปัจเจกบุคคล แต่เจ้าโปรแกรม Family Folder Collector (FFC) นี้จะมีประโยชน์มากสำหรับโรงพยาบาลหรือหน่วยงานสาธารณสุขในชุมชน โดยเฉพาะชุมชนตามต่างจังหวัดเพราะปัจจุบันประเทศไทยมีโรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.) อยู่ทั่วประเทศหลายพันแห่งซึ่งถูกยกระดับขึ้นมาจากสถานีอนามัยมาตั้งแต่ปี พ.ศ.2552 โดยภารกิจหลักของ รพ.สต. คือการป้องกันและเฝ้าระวังโรคภัยไข้เจ็บและการสร้างเสริมสุขภาพของผู้คนในชุมชน จึงเป็นที่มาของการพัฒนาโปรแกรมดังกล่าว โดย นายวัชรากร หนูทอง นักวิจัยจากห้องปฏิบัติการวิจัยนวัตกรรมไร้สายและความมั่นคง (WIS) หน่วยวิจัยเทคโนโลยีไร้สาย ข้อมูลความมั่นคงและนวัตกรรมอิเล็กทรอนิกส์เพื่ออนุรักษ์พลังงานและสิ่งแวดล้อม (WISRU) ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ มุ่งหมายให้โปรแกรมนี้เป็นฐานข้อมูลสุขภาพประชากรในทุกด้านอย่างครบวงจร
 
@@ -22,3 +21,5 @@ layout: ffc-layouts
 ปัจจุบันซอฟต์แวร์บนมือถือ (Apps) กำลังเป็นที่นิยมเนื่องจากคอมพิวเตอร์พกพาขนาดย่อม (Tablet PC) รวมไปถึงโทรศัพท์มือถืออเนกประสงค์ (Smartphone) มีราคาถูกลงประสิทธิภาพการทำงานสูงขึ้น ซึ่งถ้าหากหน่วยงานใดรู้จักใช้ประโยชน์ให้เป็นก็จะเกิดประโยชน์มหาศาลแก่หน่วยงานของตน
 
 โดยเฉพาะองค์กรภาครัฐ ที่มีหน้าที่ดูแลทุกข์สุขของประชาชนผู้จ่ายภาษีบำรุงประเทศทุกคน
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+![alt text](https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-9/75557_510314145674320_1224036556_n.jpg?oh=d421da5e9f8d7a71f55b3dde9cee0b99&oe=58C495F7.jpg)  
