--- a/_posts/2011-02-13-new8.md
+++ b/_posts/2011-02-13-new8.md
@@ -1,7 +1,7 @@
 ---
 title: โปรแกรมผู้ช่วยแพทย์เก็บข้อมูลสุขภาพชุมชน
 date: 2011-02-13 10:45:20 +0700
-description: นักวิจัยศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ (เนคเทค)
+description: นักวิจัยศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ (เนคเทค)พัฒนาโปรแกรมเก็บข้อมูลสุขภาพครัวเรือนติดตั้งใช้งานบนซัมซุง กาแลคซี่ แท็บ สนับสนุนภารกิจแพทย์และเจ้าหน้าที่สถานพยาบาลชุมชนเฝ้าระวังโรคระบาด
 author: me
 image: new8.jpg
 layout: ffc-layouts
