แก้ข่าวและเพิ่มข่าวในหน้าindex

--- a/_posts/2011-07-27-new7.md
+++ b/_posts/2011-07-27-new7.md
@@ -4,7 +4,7 @@ date: 2011-07-27 11:45:50 +0700
 description: เนคเทคส่งมอบโปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา ให้ก.สาธารณสุข เพิ่มประสิทธิภาพการเก็บข้อมูลสุขภาพปชช.ระดับชุมชน
 author: me
 image: new7.jpg
-layout: ffc-layoutsr
+layout: ffc-layouts
 ---
 
 # เนคเทคส่งไอทีลดภาระงานอสม.
